@@ -4,6 +4,7 @@ S3method(as_sge_accounting,raw_sge_accounting)
 S3method(available,queues)
 S3method(parse_category,sge_accounting)
 S3method(print,sge_accounting)
+export(anonymize_raw_sge_accounting)
 export(as_sge_accounting)
 export(available)
 export(cpu_info)
@@ -26,6 +27,7 @@ export(system_info)
 export(write_raw_sge_accounting)
 importFrom(R.cache,loadCache)
 importFrom(R.cache,saveCache)
+importFrom(forcats,fct_anon)
 importFrom(future,future)
 importFrom(future,plan)
 importFrom(future,value)
